Update testing notebook with real example.

--- a/nbs/core/testing.ipynb
+++ b/nbs/core/testing.ipynb
@@ -191,6 +191,9 @@
    "outputs": [],
    "source": [
     "from cjm_fasthtml_tailwind.core.base import combine_classes\n",
+    "from cjm_fasthtml_tailwind.utilities.spacing import *\n",
+    "from cjm_fasthtml_tailwind.utilities.sizing import *\n",
+    "from cjm_fasthtml_tailwind.utilities.layout import *\n",
     "from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import *"
    ]
   },
@@ -244,6 +247,9 @@
     "# Create a test app with default settings\n",
     "app, rt = create_test_app()\n",
     "\n",
+    "padding_val = 2\n",
+    "gap_val = 2\n",
+    "\n",
     "# Define a test route\n",
     "@rt\n",
     "def index():\n",
@@ -251,24 +257,24 @@
     "        \"Tailwind Test Page\",\n",
     "        Div(\n",
     "            # Header spans full width\n",
-    "            Header(\"Dashboard\", cls=combine_classes(col_span.full, \"p-4 bg-blue-500 text-white\")),\n",
+    "            Header(\"Dashboard\", cls=combine_classes(col_span.full, p(padding_val), \"bg-blue-500 text-white\")),\n",
     "            \n",
     "            # Sidebar\n",
-    "            Aside(\"Sidebar\", cls=combine_classes(row_span(2), \"p-4 bg-gray-200\")),\n",
+    "            Aside(\"Sidebar\", cls=combine_classes(row_span(2), p(padding_val),\"bg-gray-200\")),\n",
     "            \n",
     "            # Main content\n",
-    "            Main(\"Main Content\", cls=combine_classes(col_span(2), \"p-4\")),\n",
+    "            Main(\"Main Content\", cls=combine_classes(col_span(2), p(padding_val))),\n",
     "            \n",
     "            # Stats cards\n",
-    "            Div(\"Stat 1\", cls=\"p-4 bg-green-100\"),\n",
-    "            Div(\"Stat 2\", cls=\"p-4 bg-yellow-100\"),\n",
+    "            Div(\"Stat 1\", cls= combine_classes(p(padding_val), \"bg-green-100\")),\n",
+    "            Div(\"Stat 2\", cls= combine_classes(p(padding_val), \"bg-yellow-100\")),\n",
     "            \n",
     "            cls=combine_classes(\n",
-    "                \"grid\",\n",
+    "                display_tw.grid,\n",
     "                grid_cols(3),\n",
     "                grid_rows(3),\n",
-    "                gap(4),\n",
-    "                \"h-screen\"\n",
+    "                gap(gap_val),\n",
+    "                h.screen\n",
     "            )\n",
     "        )\n",
     "    )\n",
@@ -293,23 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b39f06b4-17b0-41f3-825e-09ec7abe7c23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "258536c5-3377-492b-b40b-3f04a771d9ca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e467f86d-82a9-497f-8116-f4753da5ac48",
    "metadata": {},
    "outputs": [],
    "source": []
