--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -62,20 +62,23 @@
     "    utilities_spacing[utilities.spacing<br/>spacing]\n",
     "\n",
     "    builders_scales --> core_base\n",
-    "    core_testing --> core_base\n",
-    "    core_testing --> core_resources\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
-    "    utilities_flexbox_and_grid --> core_base\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_layout\n",
+    "    core_testing --> core_base\n",
+    "    core_testing --> utilities_sizing\n",
+    "    core_testing --> core_resources\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
+    "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_base\n",
-    "    utilities_sizing --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
-    "    utilities_spacing --> core_base\n",
+    "    utilities_sizing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
+    "    utilities_spacing --> core_base\n",
     "```\n",
     "\n",
-    "*12 cross-module dependencies detected*"
+    "*15 cross-module dependencies detected*"
    ]
   },
   {
@@ -616,7 +619,7 @@
     "```python\n",
     "from cjm_fasthtml_tailwind.utilities.layout import (\n",
     "    DISPLAY_VALUES,\n",
-    "    display,\n",
+    "    display_tw,\n",
     "    sr_only,\n",
     "    not_sr_only,\n",
     "    POSITION_VALUES,\n",
@@ -633,7 +636,7 @@
     "    Z_INDEX_CONFIG,\n",
     "    z,\n",
     "    FLOAT_VALUES,\n",
-    "    float_util,\n",
+    "    float_tw,\n",
     "    CLEAR_VALUES,\n",
     "    clear,\n",
     "    OBJECT_FIT_VALUES,\n",
@@ -785,7 +788,7 @@
     "\n",
     "```python\n",
     "DISPLAY_VALUES = {22 items}  # Display utilities\n",
-    "display  # The display factory\n",
+    "display_tw  # The display factory\n",
     "sr_only = 'sr-only'  # Screen reader only\n",
     "not_sr_only = 'not-sr-only'  # Not screen reader only\n",
     "POSITION_VALUES = {5 items}  # Position utilities\n",
@@ -802,7 +805,7 @@
     "Z_INDEX_CONFIG  # Z-index configuration\n",
     "z  # The z-index factory\n",
     "FLOAT_VALUES = {5 items}\n",
-    "float_util  # Renamed to avoid conflict with Python's float\n",
+    "float_tw  # Renamed to avoid conflict with Python's float\n",
     "CLEAR_VALUES = {6 items}\n",
     "clear  # The clear factory\n",
     "OBJECT_FIT_VALUES = {5 items}\n",
