--- a/nbs/utilities/layout.ipynb
+++ b/nbs/utilities/layout.ipynb
@@ -94,7 +94,7 @@
     "    \"none\": \"none\"\n",
     "}\n",
     "\n",
-    "display = SimpleFactory(DISPLAY_VALUES) # The display factory\n",
+    "display_tw = SimpleFactory(DISPLAY_VALUES) # The display factory\n",
     "\n",
     "# Special display utilities\n",
     "sr_only = \"sr-only\"  # Screen reader only\n",
@@ -109,17 +109,17 @@
    "outputs": [],
    "source": [
     "# Test display utilities with dot notation\n",
-    "assert display.block == \"block\"\n",
-    "assert display.inline == \"inline\"\n",
-    "assert display.flex == \"flex\"\n",
-    "assert display.grid == \"grid\"\n",
-    "assert display.hidden == \"hidden\"\n",
-    "assert display.inline_flex == \"inline-flex\"\n",
+    "assert display_tw.block == \"block\"\n",
+    "assert display_tw.inline == \"inline\"\n",
+    "assert display_tw.flex == \"flex\"\n",
+    "assert display_tw.grid == \"grid\"\n",
+    "assert display_tw.hidden == \"hidden\"\n",
+    "assert display_tw.inline_flex == \"inline-flex\"\n",
     "\n",
     "# Table display utilities\n",
-    "assert display.table == \"table\"\n",
-    "assert display.table_row == \"table-row\"\n",
-    "assert display.table_cell == \"table-cell\"\n",
+    "assert display_tw.table == \"table\"\n",
+    "assert display_tw.table_row == \"table-row\"\n",
+    "assert display_tw.table_cell == \"table-cell\"\n",
     "\n",
     "# Special utilities\n",
     "assert sr_only == \"sr-only\"\n",
@@ -421,7 +421,7 @@
     "        \"Get float utility by attribute name.\"\n",
     "        return super().__getattr__(name)\n",
     "\n",
-    "float_util = FloatFactory(FLOAT_VALUES)  # Renamed to avoid conflict with Python's float"
+    "float_tw = FloatFactory(FLOAT_VALUES)  # Renamed to avoid conflict with Python's float"
    ]
   },
   {
@@ -959,7 +959,7 @@
     "# Modal overlay with z-index\n",
     "modal_overlay = Div(\n",
     "    Div(\"Modal content\", cls=combine_classes(position.relative, z(10))),\n",
-    "    cls=combine_classes(position.fixed, inset(0), z(40), display.flex, \"items-center\", \"justify-center\", \"bg-black/50\")\n",
+    "    cls=combine_classes(position.fixed, inset(0), z(40), display_tw.flex, \"items-center\", \"justify-center\", \"bg-black/50\")\n",
     ")\n",
     "assert modal_overlay.attrs['class'] == \"fixed inset-0 z-40 flex items-center justify-center bg-black/50\"\n",
     "assert modal_overlay.children[0].attrs['class'] == \"relative z-10\""
@@ -1102,25 +1102,25 @@
    "outputs": [],
    "source": [
     "# Test display utilities\n",
-    "assert display.block == \"block\"\n",
-    "assert display.inline == \"inline\"\n",
-    "assert display.flex == \"flex\"\n",
-    "assert display.grid == \"grid\"\n",
-    "assert display.hidden == \"hidden\"\n",
-    "assert display.inline_flex == \"inline-flex\"\n",
+    "assert display_tw.block == \"block\"\n",
+    "assert display_tw.inline == \"inline\"\n",
+    "assert display_tw.flex == \"flex\"\n",
+    "assert display_tw.grid == \"grid\"\n",
+    "assert display_tw.hidden == \"hidden\"\n",
+    "assert display_tw.inline_flex == \"inline-flex\"\n",
     "\n",
     "# Test table display utilities\n",
-    "assert display.table == \"table\"\n",
-    "assert display.inline_table == \"inline-table\"\n",
-    "assert display.table_caption == \"table-caption\"\n",
-    "assert display.table_cell == \"table-cell\"\n",
-    "assert display.table_column == \"table-column\"\n",
-    "assert display.table_column_group == \"table-column-group\"\n",
-    "assert display.table_footer_group == \"table-footer-group\"\n",
-    "assert display.table_header_group == \"table-header-group\"\n",
-    "assert display.table_row_group == \"table-row-group\"\n",
-    "assert display.table_row == \"table-row\"\n",
-    "assert display.list_item == \"list-item\"\n",
+    "assert display_tw.table == \"table\"\n",
+    "assert display_tw.inline_table == \"inline-table\"\n",
+    "assert display_tw.table_caption == \"table-caption\"\n",
+    "assert display_tw.table_cell == \"table-cell\"\n",
+    "assert display_tw.table_column == \"table-column\"\n",
+    "assert display_tw.table_column_group == \"table-column-group\"\n",
+    "assert display_tw.table_footer_group == \"table-footer-group\"\n",
+    "assert display_tw.table_header_group == \"table-header-group\"\n",
+    "assert display_tw.table_row_group == \"table-row-group\"\n",
+    "assert display_tw.table_row == \"table-row\"\n",
+    "assert display_tw.list_item == \"list-item\"\n",
     "\n",
     "# Test special display utilities\n",
     "assert sr_only == \"sr-only\"\n",
@@ -1219,9 +1219,9 @@
    "outputs": [],
    "source": [
     "# Test float and clear utilities\n",
-    "assert float_util.right == \"float-right\"\n",
-    "assert float_util.left == \"float-left\"\n",
-    "assert float_util.none == \"float-none\"\n",
+    "assert float_tw.right == \"float-right\"\n",
+    "assert float_tw.left == \"float-left\"\n",
+    "assert float_tw.none == \"float-none\"\n",
     "assert clear.both == \"clear-both\"\n",
     "assert clear.left == \"clear-left\"\n",
     "assert clear.none == \"clear-none\""
