Wrap test assertions into exportable functions following the test_<module>_<feature>_examples() naming convention.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -62,12 +62,12 @@
     "    utilities_spacing[utilities.spacing<br/>spacing]\n",
     "\n",
     "    builders_scales --> core_base\n",
+    "    core_testing --> core_resources\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_layout\n",
     "    core_testing --> core_base\n",
     "    core_testing --> utilities_sizing\n",
-    "    core_testing --> core_resources\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_layout\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_layout --> builders_scales\n",
@@ -382,22 +382,132 @@
     "    place_items,\n",
     "    PLACE_SELF_VALUES,\n",
     "    place_self,\n",
+    "    test_flexbox_and_grid_basis_examples,\n",
+    "    test_flexbox_and_grid_direction_examples,\n",
+    "    test_flexbox_and_grid_wrap_examples,\n",
+    "    test_flexbox_and_grid_flex_examples,\n",
     "    GrowFactory,\n",
+    "    test_flexbox_and_grid_grow_examples,\n",
     "    ShrinkFactory,\n",
+    "    test_flexbox_and_grid_shrink_examples,\n",
+    "    test_flexbox_and_grid_order_examples,\n",
+    "    test_flexbox_and_grid_template_columns_examples,\n",
+    "    test_flexbox_and_grid_template_rows_examples,\n",
     "    ColFactory,\n",
+    "    test_flexbox_and_grid_column_examples,\n",
     "    RowFactory,\n",
+    "    test_flexbox_and_grid_row_examples,\n",
+    "    test_flexbox_and_grid_flow_examples,\n",
     "    AutoColsFactory,\n",
     "    AutoRowsFactory,\n",
+    "    test_flexbox_and_grid_auto_cols_rows_examples,\n",
     "    GapFactory,\n",
+    "    test_flexbox_and_grid_gap_examples,\n",
+    "    test_flexbox_and_grid_justify_examples,\n",
+    "    test_flexbox_and_grid_align_examples,\n",
+    "    test_flexbox_and_grid_place_examples,\n",
+    "    test_flexbox_and_grid_practical_examples,\n",
     "    flex_center,\n",
     "    flex_between,\n",
     "    flex_col_center,\n",
     "    grid_center,\n",
-    "    responsive_grid\n",
+    "    responsive_grid,\n",
+    "    test_flexbox_and_grid_helper_examples,\n",
+    "    test_flexbox_and_grid_all_examples\n",
     ")\n",
     "```\n",
     "\n",
     "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_basis_examples()\n",
+    "    \"Test flex basis utilities with various scale values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_direction_examples()\n",
+    "    \"Test flex direction utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_wrap_examples()\n",
+    "    \"Test flex wrap utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_flex_examples()\n",
+    "    \"Test flex utilities for combined grow/shrink properties.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_grow_examples()\n",
+    "    \"Test flex grow utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_shrink_examples()\n",
+    "    \"Test flex shrink utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_order_examples()\n",
+    "    \"Test order utilities for flex and grid items.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_template_columns_examples()\n",
+    "    \"Test grid template columns utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_template_rows_examples()\n",
+    "    \"Test grid template rows utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_column_examples()\n",
+    "    \"Test grid column utilities including span, start, and end.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_row_examples()\n",
+    "    \"Test grid row utilities including span, start, and end.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_flow_examples()\n",
+    "    \"Test grid auto flow utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_auto_cols_rows_examples()\n",
+    "    \"Test grid auto columns and rows utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_gap_examples()\n",
+    "    \"Test gap utilities for flexbox and grid containers.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_justify_examples()\n",
+    "    \"Test justify utilities for flex and grid containers.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_align_examples()\n",
+    "    \"Test align utilities for flex and grid containers.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_place_examples()\n",
+    "    \"Test place utilities for grid containers.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_practical_examples()\n",
+    "    \"Test flexbox and grid utilities in practical FastHTML component examples.\"\n",
+    "```\n",
     "\n",
     "```python\n",
     "def flex_center(\n",
@@ -431,6 +541,16 @@
     "    gap_size: TailwindScale = 4  # Gap size between grid items\n",
     ") -> str:  # Combined CSS classes for responsive grid\n",
     "    \"Create responsive grid classes with customizable breakpoints.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_helper_examples()\n",
+    "    \"Test helper functions for common flexbox and grid patterns.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_all_examples()\n",
+    "    \"Run all flexbox and grid utility example tests.\"\n",
     "```\n",
     "\n",
     "#### Classes\n",
@@ -661,21 +781,95 @@
     "    box_decoration,\n",
     "    OVERSCROLL_VALUES,\n",
     "    overscroll,\n",
+    "    test_layout_display_examples,\n",
+    "    test_layout_position_examples,\n",
     "    InsetDirectionalFactory,\n",
+    "    test_layout_inset_examples,\n",
     "    OverflowFactory,\n",
+    "    test_layout_overflow_examples,\n",
+    "    test_layout_z_index_examples,\n",
     "    FloatFactory,\n",
+    "    test_layout_float_clear_examples,\n",
     "    ObjectPositionFactory,\n",
+    "    test_layout_object_examples,\n",
+    "    test_layout_visibility_examples,\n",
     "    AspectRatioFactory,\n",
+    "    test_layout_aspect_columns_examples,\n",
+    "    test_layout_columns_examples,\n",
     "    BreakFactory,\n",
     "    OverscrollFactory,\n",
+    "    test_layout_other_utilities_examples,\n",
+    "    test_layout_practical_examples,\n",
     "    center_absolute,\n",
     "    stack_context,\n",
     "    sticky_top,\n",
-    "    full_bleed\n",
+    "    full_bleed,\n",
+    "    test_layout_helper_examples,\n",
+    "    test_layout_all_examples\n",
     ")\n",
     "```\n",
     "\n",
     "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_layout_display_examples()\n",
+    "    \"Test display utilities with various values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_position_examples()\n",
+    "    \"Test position utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_inset_examples()\n",
+    "    \"Test inset utilities for positioning elements.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_overflow_examples()\n",
+    "    \"Test overflow utilities for content handling.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_z_index_examples()\n",
+    "    \"Test z-index utilities for stack ordering.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_float_clear_examples()\n",
+    "    \"Test float and clear utilities for content wrapping.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_object_examples()\n",
+    "    \"Test object fit and position utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_visibility_examples()\n",
+    "    \"Test visibility and box sizing utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_aspect_columns_examples()\n",
+    "    \"Test aspect ratio and columns utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_columns_examples()\n",
+    "    \"Test columns utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_other_utilities_examples()\n",
+    "    \"Test isolation, break, box decoration, and overscroll utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_practical_examples()\n",
+    "    \"Test layout utilities in practical FastHTML component examples.\"\n",
+    "```\n",
     "\n",
     "```python\n",
     "def center_absolute(\n",
@@ -701,6 +895,16 @@
     "def full_bleed(\n",
     ") -> str:  # Combined CSS classes for full-bleed layout\n",
     "    \"Make element break out of container constraints.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_helper_examples()\n",
+    "    \"Test helper functions for common layout patterns.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_all_examples()\n",
+    "    \"Run all layout utility example tests.\"\n",
     "```\n",
     "\n",
     "#### Classes\n",
@@ -1079,14 +1283,88 @@
     "    min_h,\n",
     "    max_h,\n",
     "    size_util,\n",
+    "    test_sizing_width_examples,\n",
+    "    test_sizing_width_named_examples,\n",
+    "    test_sizing_width_viewport_examples,\n",
+    "    test_sizing_arbitrary_examples,\n",
+    "    test_sizing_height_examples,\n",
+    "    test_sizing_height_viewport_examples,\n",
+    "    test_sizing_min_width_examples,\n",
+    "    test_sizing_max_width_examples,\n",
+    "    test_sizing_min_height_examples,\n",
+    "    test_sizing_size_util_examples,\n",
+    "    test_sizing_max_height_examples,\n",
+    "    test_sizing_practical_examples,\n",
     "    size,\n",
     "    square,\n",
     "    full_size,\n",
-    "    full_screen\n",
+    "    full_screen,\n",
+    "    test_sizing_helper_examples,\n",
+    "    test_sizing_all_examples\n",
     ")\n",
     "```\n",
     "\n",
     "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_width_examples()\n",
+    "    \"Test width utilities with various scales and values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_width_named_examples()\n",
+    "    \"Test width utilities with named container sizes.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_width_viewport_examples()\n",
+    "    \"Test width utilities with viewport units.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_arbitrary_examples()\n",
+    "    \"Test sizing utilities with arbitrary and custom values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_height_examples()\n",
+    "    \"Test height utilities with various scales and values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_height_viewport_examples()\n",
+    "    \"Test height utilities with viewport units.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_min_width_examples()\n",
+    "    \"Test min-width utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_max_width_examples()\n",
+    "    \"Test max-width utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_min_height_examples()\n",
+    "    \"Test min-height utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_size_util_examples()\n",
+    "    \"Test size utilities that set both width and height.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_max_height_examples()\n",
+    "    \"Test max-height utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_practical_examples()\n",
+    "    \"Test sizing utilities in practical FastHTML component examples.\"\n",
+    "```\n",
     "\n",
     "```python\n",
     "def size(\n",
@@ -1117,6 +1395,16 @@
     "def full_screen(\n",
     ") -> str:  # \"w-screen h-screen\"\n",
     "    \"Make element take full viewport width and height.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_helper_examples()\n",
+    "    \"Test helper functions for common sizing patterns.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_sizing_all_examples()\n",
+    "    \"Run all sizing utility example tests.\"\n",
     "```\n",
     "\n",
     "#### Variables\n",
@@ -1153,13 +1441,69 @@
     "    space,\n",
     "    space_x_reverse,\n",
     "    space_y_reverse,\n",
+    "    test_spacing_basic_examples,\n",
+    "    test_spacing_directional_examples,\n",
+    "    test_spacing_arbitrary_examples,\n",
+    "    test_spacing_margin_examples,\n",
+    "    test_spacing_margin_directional_examples,\n",
+    "    test_spacing_negative_examples,\n",
+    "    test_spacing_logical_examples,\n",
     "    SpaceFactory,\n",
+    "    test_spacing_space_between_examples,\n",
+    "    test_spacing_practical_examples,\n",
     "    pad,\n",
-    "    margin\n",
+    "    margin,\n",
+    "    test_spacing_helper_examples,\n",
+    "    test_spacing_all_examples\n",
     ")\n",
     "```\n",
     "\n",
     "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_spacing_basic_examples()\n",
+    "    \"Test basic padding utilities with various scale values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_spacing_directional_examples()\n",
+    "    \"Test directional padding utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_spacing_arbitrary_examples()\n",
+    "    \"Test padding utilities with arbitrary and custom values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_spacing_margin_examples()\n",
+    "    \"Test basic margin utilities with various scale values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_spacing_margin_directional_examples()\n",
+    "    \"Test directional margin utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_spacing_negative_examples()\n",
+    "    \"Test negative margin utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_spacing_logical_examples()\n",
+    "    \"Test logical properties for padding and margin utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_spacing_space_between_examples()\n",
+    "    \"Test space between child elements utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_spacing_practical_examples()\n",
+    "    \"Test spacing utilities in practical FastHTML component examples.\"\n",
+    "```\n",
     "\n",
     "```python\n",
     "def pad(\n",
@@ -1186,6 +1530,16 @@
     "    negative: bool = False                 # Apply negative margins\n",
     ") -> str:  # Space-separated margin classes\n",
     "    \"Generate margin classes with a convenient API.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_spacing_helper_examples()\n",
+    "    \"Test helper functions for common spacing patterns.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_spacing_all_examples()\n",
+    "    \"Run all spacing utility example tests.\"\n",
     "```\n",
     "\n",
     "#### Classes\n",
